# Secrets

./: .gitignore  CMakeLists.txt  README.md  app_icon.rc  resources.qrc
src/: main.cpp
src/application/: appsettings.cpp  appsettings.h  autostartmanager.cpp  autostartmanager.h  singleinstance.h  vaultservice.cpp  vaultservice.h  vaultsession.cpp  vaultsession.h
src/domain/: node.cpp  node.h
src/infrastructure/: cryptoservice.cpp  cryptoservice.h  settingsstorage.cpp  settingsstorage.h  vaultformat.cpp  vaultformat.h  vaultheader.h  xmlstorage.cpp  xmlstorage.h
src/model/: treefilterproxymodel.cpp  treefilterproxymodel.h  treemodel.cpp  treemodel.h
src/shared/: applicationcontext.h  systemcontext.h
src/ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui
src/ui/icons/: iconcache.cpp  iconcache.h  iconcachekey.h  iconid.h  iconprovider.cpp  iconprovider.h
src/ui/localization/: languagemanager.cpp  languagemanager.h  languagemode.h
src/ui/theme/: iconcolor.h  palettemode.h  stylesprovider.cpp  stylesprovider.h  thememanager.cpp  thememanager.h  thememode.h  themestyle.h
translations/: secrets_ru.ts
